Fix Formatting For Tom's Slide
So it doesn't go off the screen

--- a/_posts/0000-01-07-tjd61.md
+++ b/_posts/0000-01-07-tjd61.md
@@ -4,8 +4,7 @@ title: Thomas Driscoll
 ---
 
 **Major**
-- Computer Engineering
-- Stuido Arts _(Minor)_
+- Computer Engineering _(Major)_, Studio Arts _(Minor)_
 
 **Interests**
 - Product & UX Design
